--- a/MovieSuggestion.Core/Resources/Resource.tr.resx
+++ b/MovieSuggestion.Core/Resources/Resource.tr.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="INCORRECT_PASSWORD" xml:space="preserve">
-    <value>Hatalı şifre</value>
+    <value>Hatalı şifre!</value>
+  </data>
+  <data name="USERNAME_OR_PASSWORD_INCORRECT" xml:space="preserve">
+    <value>Kullanıcı adı veya şifre hatalı!</value>
   </data>
 </root>
